--- a/Ceriyo.Toolset/Windows/ScriptEditorWindow.xaml
+++ b/Ceriyo.Toolset/Windows/ScriptEditorWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" x:Class="Ceriyo.Toolset.Windows.ScriptEditorWindow"
-        Title="Script Editor" Height="600" Width="700">
+        Title="Script Editor" Height="600" Width="700" Loaded="Window_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -10,36 +10,33 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="20"></RowDefinition>
-            <RowDefinition Height="20"></RowDefinition>
+            <RowDefinition Height="32"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="100"></RowDefinition>
+            <RowDefinition Height="32"></RowDefinition>
         </Grid.RowDefinitions>
-        
-        <Menu HorizontalAlignment="Stretch" 
-              Height="Auto" 
-              Grid.Column="0"
-              Grid.Row="0"
-              Grid.ColumnSpan="3"
-              VerticalAlignment="Stretch" 
-              Width="Auto">
-            <MenuItem Header="File">
-                <MenuItem Header="New"></MenuItem>
-                <MenuItem Header="Save"></MenuItem>
-                <MenuItem Header="Save as..."></MenuItem>
-                <Separator></Separator>
-                <MenuItem Header="Close"></MenuItem>
-            </MenuItem>
-        </Menu>
         <TabControl Grid.Column="2" 
                     HorizontalAlignment="Stretch" 
                     Height="Auto" 
-                    Grid.Row="2" 
+                    Grid.Row="1" 
                     Grid.RowSpan="3" 
                     VerticalAlignment="Stretch" 
                     Width="Auto">
+            <TabItem Header="Scripts">
+                <Grid Background="#FFE5E5E5">
+                    <ListBox Name="lbScripts"
+                             HorizontalAlignment="Stretch" 
+                             Height="Auto" 
+                             ItemsSource="{Binding ScriptNames}"
+                             MouseDoubleClick="OpenScript"
+                             VerticalAlignment="Stretch" 
+                             Width="Auto"/>
+
+                </Grid>
+            </TabItem>
+            
             <TabItem Header="Methods">
                 <Grid Background="#FFE5E5E5">
                     <ListBox Name="lbMethods"
@@ -62,7 +59,7 @@
         <avalonedit:TextEditor Name="teHelp"
                                SyntaxHighlighting="JavaScript"
                                HorizontalAlignment="Stretch" 
-                               Grid.Row="5"
+                               Grid.Row="4"
                                Grid.Column="0"
                                Grid.ColumnSpan="3"
                                IsReadOnly="True"
@@ -71,19 +68,60 @@
                     Grid.ColumnSpan="2" 
                     HorizontalAlignment="Stretch" 
                     Height="Auto" 
-                    Grid.Row="2" 
+                    Grid.Row="1" 
                     Grid.RowSpan="3" 
                     VerticalAlignment="Stretch" 
+                    ItemsSource="{Binding OpenScripts}"
                     Width="Auto">
-            <TabItem Header="script0">
-                <Grid Background="#FFE5E5E5">
-
-                    <avalonedit:TextEditor Name="teEditor"
-                               SyntaxHighlighting="JavaScript"
+            
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock>
+                        <TextBlock Text="{Binding Name}" />
+                    </TextBlock>
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+            <TabControl.ContentTemplate>
+                <DataTemplate>
+                    <avalonedit:TextEditor SyntaxHighlighting="JavaScript"
                                HorizontalAlignment="Stretch" 
-                               VerticalAlignment="Stretch"/>
-                </Grid>
-            </TabItem>
+                               VerticalAlignment="Stretch"
+                               Document="{Binding ScriptDocument}" />
+
+                </DataTemplate>
+            </TabControl.ContentTemplate>
         </TabControl>
+        <ToolBar HorizontalAlignment="Stretch" 
+                 VerticalAlignment="Stretch"
+                 Grid.ColumnSpan="3"
+                 Grid.Row="0" >
+            <Button Name="btnNewScript"
+                    Width="25"
+                    Height="25"
+                    Click="NewScript">
+                <Image Source="/Images/document-new-6.png"></Image>
+            </Button>
+
+            <Button Name="btnSaveScript"
+                    Width="25"
+                    Height="25"
+                    Click="SaveScript">
+                <Image Source="/Images/document-save-5.png"></Image>
+            </Button>
+            <Button Name="btnSaveAllScripts"
+                    Width="25"
+                    Height="25"
+                    Click="SaveAllScripts">
+                <Image Source="/Images/document-save-all.png"></Image>
+            </Button>
+        </ToolBar>
+        <Button Content="Exit" 
+                Grid.Column="2" 
+                HorizontalAlignment="Left" 
+                Margin="146,6,0,0" 
+                Grid.Row="5" 
+                VerticalAlignment="Top" 
+                Click="Close"
+                Width="75"/>
     </Grid>
 </Window>
