--- a/Ceriyo.Toolset/Windows/ScriptEditorWindow.xaml
+++ b/Ceriyo.Toolset/Windows/ScriptEditorWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" x:Class="Ceriyo.Toolset.Windows.ScriptEditorWindow"
-        Title="Script Editor" Height="600" Width="700" Loaded="Window_Loaded">
+        Title="Script Editor" Height="600" Width="700" Closing="Window_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -32,7 +32,20 @@
                              ItemsSource="{Binding ScriptNames}"
                              MouseDoubleClick="OpenScript"
                              VerticalAlignment="Stretch" 
-                             Width="Auto"/>
+                             Width="Auto">
+                        <ListBox.ContextMenu>
+                            <ContextMenu Name="ctxScripts">
+                                <MenuItem Name="miOpenScript" 
+                                          Header="Open"
+                                          Click="miOpenScript_Click">
+                                </MenuItem>
+                                <MenuItem Name="miDeleteScript" 
+                                          Header="Delete"
+                                          Click="miDeleteScript_Click">
+                                </MenuItem>
+                            </ContextMenu>
+                        </ListBox.ContextMenu>
+                    </ListBox>
 
                 </Grid>
             </TabItem>
@@ -123,5 +136,7 @@
                 VerticalAlignment="Top" 
                 Click="Close"
                 Width="75"/>
+        
     </Grid>
+    
 </Window>
