Multi tile selection

--- a/Ceriyo.Toolset/Components/PaintObjectsControl.xaml
+++ b/Ceriyo.Toolset/Components/PaintObjectsControl.xaml
@@ -17,30 +17,43 @@
 
                     <DockPanel>
 
-                        <ScrollViewer HorizontalScrollBarVisibility="Auto">
-                            <Grid>
-                                <Image Name="imgTiles"
-                                       Stretch="Fill"
-                                       Width="{Binding RelativeSource={RelativeSource Self}, Path=Source.PixelWidth}" 
-                                       Height="{Binding RelativeSource={RelativeSource Self}, Path=Source.PixelHeight}"
-                                       HorizontalAlignment="Left"
-                                       VerticalAlignment="Top"></Image>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
 
-                                <Canvas Name="cnvTilePicker" MouseDown="Canvas_MouseDown">
-                                    <Canvas.Background>
-                                        <DrawingBrush Viewport="0,0,64,32" ViewportUnits="Absolute" TileMode="Tile"></DrawingBrush>
-                                    </Canvas.Background>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"></RowDefinition>
+                                <RowDefinition Height="30"></RowDefinition>
+                            </Grid.RowDefinitions>
 
-                                    <Rectangle Name="rectSelectedTiles"
-                                           Stroke="Black"
-                                           Fill="Yellow"
-                                           Opacity="0.3"
-                                           Visibility="Hidden">
-                                    </Rectangle>
-                                </Canvas>
-                            </Grid>
-                        </ScrollViewer>
+                            <ScrollViewer HorizontalScrollBarVisibility="Auto">
+                                <Grid>
+                                    <Image Name="imgTiles"
+                                           Stretch="Fill"
+                                           Width="{Binding RelativeSource={RelativeSource Self}, Path=Source.PixelWidth}" 
+                                           Height="{Binding RelativeSource={RelativeSource Self}, Path=Source.PixelHeight}"
+                                           HorizontalAlignment="Left"
+                                           VerticalAlignment="Top"></Image>
 
+                                    <Canvas Name="cnvTilePicker" 
+                                            MouseDown="Canvas_MouseDown"
+                                            MouseUp="Canvas_MouseUp"
+                                            MouseMove="Canvas_MouseMove">
+                                        <Canvas.Background>
+                                            <DrawingBrush Viewport="0,0,32,32" ViewportUnits="Absolute" TileMode="Tile"></DrawingBrush>
+                                        </Canvas.Background>
+
+                                        <Rectangle Name="rectSelectedTiles"
+                                               Stroke="Black"
+                                               Fill="Yellow"
+                                               Opacity="0.3"
+                                               Visibility="Hidden">
+                                        </Rectangle>
+                                    </Canvas>
+                                </Grid>
+                            </ScrollViewer>
+                        </Grid>
                     </DockPanel>
 
                 </TabItem>
