--- a/Ceriyo.Toolset/Components/AnimationEditorComponent.xaml
+++ b/Ceriyo.Toolset/Components/AnimationEditorComponent.xaml
@@ -1,115 +1,185 @@
-﻿<UserControl x:Class="Ceriyo.Toolset.Components.AnimationEditorComponent"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" x:Class="Ceriyo.Toolset.Components.AnimationEditorComponent" 
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="700" Background="White">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="145"></ColumnDefinition>
-            <ColumnDefinition Width="145"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="120"></ColumnDefinition>
+            <ColumnDefinition Width="145"/>
+            <ColumnDefinition Width="120"/>
+            <ColumnDefinition Width="55"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="175"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="184*"></RowDefinition>
-            <RowDefinition Height="149*"></RowDefinition>
-            <RowDefinition Height="167*"></RowDefinition>
+            <RowDefinition Height="184*"/>
+            <RowDefinition Height="149*"/>
+            <RowDefinition Height="100*"/>
         </Grid.RowDefinitions>
 
-        <ListBox Name="lbAnimations"
-                 Grid.Column="0"
-                 Grid.Row="0"
-                 Grid.RowSpan="3"
-                 BorderBrush="Black" 
-                 ItemsSource="{Binding Animations}"
-                 SelectedItem="{Binding Path=SelectedAnimation, Mode=TwoWay}"
-                 DisplayMemberPath="Name"
-                 SelectionChanged="AnimationSelected"
-                 Margin="0,27,0,41">
-        </ListBox>
+        <ListBox x:Name="lbAnimations"
+			Grid.Column="0"
+			Grid.Row="0"
+			Grid.RowSpan="3"
+			BorderBrush="Black" 
+			ItemsSource="{Binding Animations}"
+			SelectedItem="{Binding SelectedAnimation, Mode=TwoWay}"
+			DisplayMemberPath="Name"
+			SelectionChanged="AnimationSelected"
+			Margin="0,27,0,41"/>
         <Label Content="Animations:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="26" Width="125"/>
         <ListBox x:Name="lbFrames"
-        	Grid.Column="1"
-        	Grid.Row="1"
-        	Grid.RowSpan="2"
-        	BorderBrush="Black" 
-        	ItemsSource="{Binding SelectedAnimation.Frames}"
-            SelectedItem="{Binding Path=SelectedFrame, Mode=TwoWay}"
-        	DisplayMemberPath="Name"
-        	SelectionChanged="FrameSelected"
-        	Margin="0,34,0,41"/>
-        <Label Content="Frames:" HorizontalAlignment="Left" Margin="11,3,0,0" VerticalAlignment="Top" Height="26" Width="125" Grid.Column="1" Grid.Row="1"/>
+			Grid.Column="5"
+			BorderBrush="Black" 
+			ItemsSource="{Binding SelectedAnimation.Frames}"
+			SelectedItem="{Binding SelectedFrame, Mode=TwoWay}"
+			DisplayMemberPath="Name"
+			SelectionChanged="FrameSelected"
+			Margin="7,41,51,34"/>
+        <Label Content="Preview:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="26" Width="100" Grid.Column="1" Grid.Row="1"/>
 
-        <Button Name="btnNewAnimation"
-                Content="New" 
-                Click="NewAnimation"
-                HorizontalAlignment="Left" 
-                Margin="10,0,0,10" 
-                Grid.Row="2" 
-                VerticalAlignment="Bottom" 
-                Width="52" Height="22"/>
-        <Button Name="btnDeleteAnimation"
-                Content="Delete" 
-                Click="DeleteAnimation"
-                HorizontalAlignment="Left" 
-                Margin="83,0,0,10" 
-                Grid.Row="2" 
-                VerticalAlignment="Bottom" 
-                IsEnabled="{Binding IsAnimationSelected}"
-                Width="52" Height="22"/>
+        <Button x:Name="btnNewAnimation"
+			Content="New" 
+			Click="NewAnimation"
+			HorizontalAlignment="Left" 
+			Margin="10,0,0,10" 
+			Grid.Row="2" 
+			VerticalAlignment="Bottom" 
+			Width="52" Height="22"/>
+        <Button x:Name="btnDeleteAnimation"
+			Content="Delete" 
+			Click="DeleteAnimation"
+			HorizontalAlignment="Left" 
+			Margin="83,0,0,10" 
+			Grid.Row="2" 
+			VerticalAlignment="Bottom" 
+			IsEnabled="{Binding IsAnimationSelected}"
+			Width="52" Height="22"/>
         <Button x:Name="btnNewFrame"
-        	Content="New" 
-        	Click="NewFrame"
-        	HorizontalAlignment="Left" 
-        	Margin="10,0,0,10" 
-        	Grid.Row="2" 
-        	VerticalAlignment="Bottom" 
-        	Width="52" Height="22" Grid.Column="1"/>
+			Content="New" 
+			Click="NewFrame"
+			HorizontalAlignment="Left" 
+			Margin="10,0,0,7" 
+			IsEnabled="{Binding IsAnimationSelected}"
+			VerticalAlignment="Bottom" 
+			Width="52" Height="22" Grid.Column="5"/>
         <Button x:Name="btnDeleteFrame"
-        	Content="Delete" 
-        	Click="DeleteFrame"
-        	HorizontalAlignment="Left" 
-        	Margin="83,0,0,10" 
-        	Grid.Row="2" 
-        	VerticalAlignment="Bottom" 
-        	IsEnabled="{Binding IsAnimationSelected}"
-        	Width="52" Height="22" Grid.Column="1"/>
+			Content="Delete" 
+			Click="DeleteFrame"
+			HorizontalAlignment="Left" 
+			Margin="67,0,0,7" 
+			VerticalAlignment="Bottom" 
+			IsEnabled="{Binding IsAnimationSelected}"
+			Width="52" Height="22" Grid.Column="5"/>
         <TextBox x:Name="txtName"
-        	Grid.Column="1" 
-        	HorizontalAlignment="Left" 
-        	Height="23" Margin="5,36,0,0" 
-        	TextWrapping="Wrap" 
-        	Text="{Binding SelectedAnimation.Name}" 
-        	IsEnabled="{Binding IsAnimationSelected}"
-        	VerticalAlignment="Top" 
-        	Width="135"/>
+			Grid.Column="1" 
+			HorizontalAlignment="Left" 
+			Height="23" Margin="5,36,0,0" 
+			TextWrapping="Wrap" 
+			Text="{Binding SelectedAnimation.Name}" 
+			IsEnabled="{Binding IsAnimationSelected}"
+			VerticalAlignment="Top" 
+			Width="105"/>
         <Label Content="Name:" Grid.Column="1" HorizontalAlignment="Left" Margin="11,10,0,0" VerticalAlignment="Top" Height="26" Width="44"/>
         <TextBox x:Name="txtTag" 
-        	Grid.Column="1" 
-        	HorizontalAlignment="Left" 
-        	Height="23" 
-        	Margin="5,90,0,0" 
-        	TextWrapping="Wrap" 
-        	Text="{Binding SelectedAnimation.Tag}" 
-        	IsEnabled="{Binding IsAnimationSelected}"
-        	VerticalAlignment="Top" 
-        	Width="135"/>
+			Grid.Column="1" 
+			HorizontalAlignment="Left" 
+			Height="23" 
+			Margin="5,90,0,0" 
+			TextWrapping="Wrap" 
+			Text="{Binding SelectedAnimation.Tag}" 
+			IsEnabled="{Binding IsAnimationSelected}"
+			VerticalAlignment="Top" 
+			Width="105"/>
         <Label Content="Tag:" Grid.Column="1" HorizontalAlignment="Left" Margin="11,64,0,0" VerticalAlignment="Top" Height="26" Width="32"/>
         <TextBox x:Name="txtResref" 
-        	Grid.Column="1" 
-        	HorizontalAlignment="Left" 
-        	Height="23" 
-        	Margin="5,144,0,0" 
-        	TextWrapping="Wrap" 
-        	Text="{Binding SelectedAnimation.Resref}" 
-        	IsEnabled="{Binding IsAnimationSelected}"
-        	VerticalAlignment="Top" 
-        	Width="135"/>
+			Grid.Column="1" 
+			HorizontalAlignment="Left" 
+			Height="23" 
+			Margin="5,144,0,0" 
+			TextWrapping="Wrap" 
+			Text="{Binding SelectedAnimation.Resref}" 
+			IsEnabled="{Binding IsAnimationSelected}"
+			VerticalAlignment="Top" 
+			Width="105"/>
         <Label Content="Resref:" Grid.Column="1" HorizontalAlignment="Left" Margin="11,118,0,0" VerticalAlignment="Top" Height="26" Width="45"/>
+
+        <DockPanel Background="LightGray"
+			Grid.Column="2"
+			Grid.Row="0"
+			Grid.ColumnSpan="3"
+			Grid.RowSpan="2">
+
+            <ScrollViewer>
+                <Grid>
+
+                    <Canvas x:Name="cnvEditor"/>
+                </Grid>
+            </ScrollViewer>
+        </DockPanel>
+        <Button Content="Up" Grid.Column="5" HorizontalAlignment="Left" Margin="129,41,0,0" VerticalAlignment="Top" Width="45"/>
+        <Button Content="Down" Grid.Column="5" HorizontalAlignment="Left" Margin="129,68,0,0" VerticalAlignment="Top" Width="45"/>
+        <ListBox x:Name="lbGraphics"
+			Grid.ColumnSpan="3" 
+			Grid.Column="2" 
+			HorizontalAlignment="Stretch" 
+			Height="Auto" 
+			Grid.Row="2" 
+			VerticalAlignment="Stretch" 
+			Width="Auto"/>
+        <CheckBox x:Name="chkFlipHorizontal"
+			Content="Flip Horizontal" 
+			Grid.Column="5" 
+			HorizontalAlignment="Left" 
+			Margin="10,87,0,0" 
+			VerticalAlignment="Top" Grid.Row="1"/>
+        <CheckBox x:Name="chkFlipVertical"
+			Content="Flip Vertical" 
+			Grid.Column="5" 
+			HorizontalAlignment="Left" 
+			Margin="10,66,0,0" 
+			VerticalAlignment="Top" Grid.Row="1"/>
+        <Label Content="Name:" Grid.Column="5" HorizontalAlignment="Left" Margin="7,10,0,0" VerticalAlignment="Top" Height="26" Width="45" Grid.Row="1"/>
+        <TextBox x:Name="txtFrameName"
+			Grid.Column="5" 
+			HorizontalAlignment="Left" 
+			Height="23" Margin="67,13,0,0" 
+			TextWrapping="Wrap" 
+			Text="{Binding SelectedFrame.Name}" 
+			IsEnabled="{Binding IsFrameSelected}"
+			VerticalAlignment="Top" 
+			Width="98" Grid.Row="1"/>
+
+
+        <xctk:DecimalUpDown Name="decLength"
+            Grid.Column="5" 
+            Increment="0.1"
+            Maximum="5.0"
+            Minimum="0.1"
+            Value="0.1"
+            HorizontalAlignment="Left" 
+            Margin="67,41,0,0" 
+            VerticalAlignment="Top" 
+            Width="98" 
+            Grid.Row="1"/>
+        <Label Content="Length:" Grid.Column="5" HorizontalAlignment="Left" Margin="8,36,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <Grid Grid.Column="1" 
+              HorizontalAlignment="Left" 
+              Height="70" 
+              Width="70"
+              Margin="11,41,0,0" 
+              Background="LightGray"
+              VerticalAlignment="Top" Grid.Row="1">
+
+
+        </Grid>
+        <Label Content="Frames:" Grid.Column="5" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+
 
     </Grid>
 </UserControl>
